--- a/touch-3d.html
+++ b/touch-3d.html
@@ -132,7 +132,7 @@ $(window).resize(function(){
 		<div class="row">	
 			<div class="col-sm-12">
 				<hr>
-					<p>Toate drepturile rezervate @ iPhone 6s</p>
+					<p class="copyright">Toate drepturile rezervate @ iPhone 6s</p>
 			</div>
 		</div>
 	</div>
